add: feature to update song
